# findiff

./: .gitignore  .readthedocs.yml  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  TODOs  can-github-do-it.md  can-github-do-it.rst  diff.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  docs.yml
docs/: Makefile  conf.py  deploy.sh  index.rst  make.bat  requirements.txt
docs/assets/: chaining.tex  d2_dy2.tex  d3_dx2dy.tex  d3_dx2dz.tex  d4_dy4.tex  d8_dy8.tex  d_dt.tex  d_dx.tex  d_dx_10.tex  d_dy.tex  d_dz.tex  img-79ec3ad29895a658.tex  img-79ec3ad29895a659.tex  img-a06bc52fe5a97f4a.tex  img-db2705be98d985e0.tex  img-fea6c2b797c4f20b.tex  laplacian2d.tex
docs/code/: diff.rst
docs/frontpage/: d2_dx2.tex  d2_dxdy.tex  d2_dxdz.tex  img-17719361f7e419dc.tex  img-2b2de8b883ab262d.tex  img-66238f314ddd7bd8.tex  img-79ec3ad29895a658.tex  img-79ec3ad29895a659.tex  img-e840919a9f9079bd.tex  lc.tex  linear_comb.tex  set_background.py  var_coef.tex
docs/scripts/: plt_func_on_grid.py  plt_grids_with_stencils.py  plt_logo.py  plt_stencil.py  plt_stencil_1d.py  plt_stencils_for_readme.py  plt_stencils_laplacian.py
docs/source/: citation.rst  coefs.rst  compact.rst  conf.py  diff.rst  examples-basic.rst  examples-matrix.rst  examples-non-uniform-grids.rst  examples-periodic.ipynb  examples-periodic.nblink  examples-polar.rst  examples-vector-calculus.rst  examples.rst  findiff.rst  getstarted.rst  index.rst  migration.rst  modules.rst  operators.rst  pde.rst  stencils.rst  theory.rst  vector.rst
docs/source/api/: coefs.rst  compact.rst  diff.rst  index.rst  ivp.rst  pde.rst  stencils.rst  symbolic.rst  vector.rst
docs/source/getting-started/: index.rst
docs/source/guides/: basic-derivatives.rst  boundary-conditions.rst  compact-fd.rst  cookbook.rst  error-estimation.rst  gpu-backends.rst  index.rst  matrix-representation.rst  non-uniform-grids.rst  periodic-bc.rst  polar-coordinates.rst  solving-pdes.rst  time-dependent-pdes.rst  vector-calculus.rst
docs/source/scripts/: make_plots.py
docs/source/theory/: index.rst
examples/: basic.py  examples-basic.ipynb  examples-non-uniform-grids.ipynb  examples-periodic.ipynb  examples-polar.ipynb  examples-stencils.ipynb  examples-vector-calculus.ipynb  linear_op.py  non-uniform-grids.ipynb  symbolic.ipynb  vector_calculus.py
findiff/: __init__.py  _version.py  backend.py  coefs.py  compact.py  compatible.py  diff.py  findiff.py  grids.py  interface.py  ivp.py  operators.py  pde.py  stencils.py  symbolic.py  test_findiff.py  util.py  utils.py  vector.py
findiff/current/: __init__.py  operators.py
findiff/legacy/: __init__.py  diff.py  operators.py  utils.py
test/: test_basicfindiff.py  test_bugs.py  test_coefs.py  test_diff.py  test_findiff.py  test_grids.py  test_id.py  test_pde.py  test_performance.py  test_scaling.py  test_stencils.py  test_symbolic.py  test_utils.py  test_vector.py
test/legacy/: test_coefs.py  test_diff.py  test_grids.py  test_scaling.py  test_stencils.py  test_utils.py
tests/: conftest.py  test_accuracy.py  test_backend.py  test_benchmark.py  test_bugs.py  test_coefs.py  test_compact.py  test_diff.py  test_eigenvalue.py  test_error_estimation.py  test_examples.py  test_findiff.py  test_functional.py  test_grid.py  test_iterative_solvers.py  test_ivp.py  test_nonuniform_optimized.py  test_operators.py  test_pde.py  test_pde_old.py  test_robin_bc.py  test_scaling.py  test_stencils.py  test_symbolic.py  test_utils.py  test_vector.py  utils.py
tests/legacy/: test_bugs.py  test_coefs.py  test_findiff.py  test_pde.py  test_scaling.py  test_stencils.py  test_symbolic.py  test_vector.py
