[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "findiff"
authors = [
    {name = "Matthias Baer"},
]
maintainers = [
    {name = "Matthias Baer", email="matthias.r.baer@googlemail.com"},
]
description = "A Python package for finite difference derivatives in any number of dimensions."
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "sympy"
]
dynamic = ["version"]

requires-python = ">=3.8"
keywords = ["finite-differences", "numerical-derivatives", "scientific-computing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/maroba/findiff"
source = "https://github.com/maroba/findiff"
Issues = "https://github.com/maroba/findiff/issues"
tracker = "https://github.com/maroba/findiff/issues"

[tool.setuptools.packages.find]
include = ["findiff", "findiff.*"]

[tool.setuptools.dynamic]
version = { attr = "findiff.__version__" }